# ullm

./: GRACEFUL_SHUTDOWN.md  IMPLEMENTATION_SUMMARY.md  README.md  bench.py  pyproject.toml  test_graceful_shutdown.py
docs/: async_scheduling.md  multiprocessing_design.md  profiling.md  scheduler_design.md
ullm/: __init__.py  config.py  llm.py  logger.py  model_loader.py  serial.py  utils.py
ullm/core/: common.py  cuda_graph.py  engine.py  engine_client.py  executor.py  input_batch.py  kv_cache.py  model_runner.py  req_state.py  scheduler.py  worker.py  worker_client.py
ullm/distributed/: __init__.py  communication_op.py  parallel_state.py  utils.py
ullm/entrypoints/: api_server.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py  utils.py
ullm/entrypoints/openai/: api_server.py  protocol.py  serving_chat.py  serving_completion.py  serving_engine.py
ullm/layers/: activation.py  attention.py  layernorm.py  linear.py  rotary_embedding.py  sampler.py  utils.py  vocab_parallel_embedding.py
ullm/models/: qwen3.py  registry.py
