[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ullm"
version = "0.1.0"
description = "A minimal vLLM-like LLM distributed inference framework with radix-tree based cache"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "izmttk" }]
dependencies = [
    "torch>=2.8.0",
    "triton>=3.0.0",
    "transformers>=4.51.0,<=4.57.3",
    "fastapi>=0.95.0",
    "uvicorn",
    "flashinfer-python>=0.2.7",
    "psutil",
]

[project.urls]
Homepage = "https://github.com/izmttk/ullm"

[tool.setuptools]
package-dir = {"" = "."}
packages = ["ullm"]

